--- a/src/views/MovieList/movieList.css
+++ b/src/views/MovieList/movieList.css
@@ -1,5 +1,6 @@
 .movieList-container {
     width: 80%;
+    margin: auto;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
